# Couchbase_vattenfall

./: .gitignore  AGENTS.md  README.md  polytope.yml  skills-lock.json  start_pipeline.ps1  vattenfall_style.md
.cursor/: mcp.json
clients/: README.md
config/: .gitignore  README.md
documentation/: analysis_coupling_map.md  analysis_latency_causes.md  analysis_runtime_hotspots.md  analysis_treesitter_hotspots.md  analysis_treesitter_parse_summaries.json  analysis_treesitter_symbols.md  api_and_demo_guide.md  data_generation_foundation.md  edge_runtime_pipeline.md  hackathon_idea.md  infrastructure_implementation_checklist.md  jimmy_windows_integration_plan.md  ml_anomaly_detection.md  module_io_contracts.md  presentation_slides.md  storage_and_compaction.md  system_architecture.md  turbine_simulation_guide.md
models/python/: README.md  pyproject.toml
models/python/models/entities/: README.md
models/python/models/operations/: README.md  __init__.py
models/python/models/types/: README.md  __init__.py
services/python-fast-api/: .gitignore  pyproject.toml  train_model.py
services/python-fast-api/src/: anomaly_detector.py  compaction_policy.py  db.py  main.py  simulation.py
services/python-fast-api/src/models/: edgeguard.py
services/python-fast-api/src/persistence/: __init__.py  central_store.py  edge_store.py  state_store.py
services/python-fast-api/src/pipeline/: __init__.py  constants.py  runtime.py
services/python-fast-api/src/routes/: base.py  connection.py  health.py  metrics.py  model.py  storage.py  stream.py  system.py  turbines.py
(+125 files in other folders)
