[project]
name = "models"
version = "0.1.0"
description = "Shared models"
requires-python = ">=3.12"
dependencies = [
    "clients",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
clients = { path = "../../clients/python", editable = true }
