[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "clients",
    "models",
    "cryptography>=46.0.3",
    "fastapi[standard-no-fastapi-cloud-cli]==0.116.1",
    "psycopg[binary,pool]==3.2.9",
    "pyjwt[cryptography]>=2.10.1",
    "sqlmodel==0.0.24",
    "twilio>=9.0.0",
    "uvicorn[standard]==0.35.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.2",
    "joblib>=1.5.3",
    "httpx>=0.28.1",
]

[project.scripts]
app = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src" = "."

[tool.uv.sources]
clients = { path = "/clients/python", editable = true }
models = { path = "/models/python", editable = true }
